force-app/main/default/objects/PTO_Hours__c/PTO_Hours__c.object-meta.xml
<CustomObject>
    <label>PTO Hours</label>
    <nameField>
        <displayFormat>PTO - {0000000000}</displayFormat>
        <label>PTO Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTO Hours</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>