force-app/main/default/objects/PTO_Hours__c/fields/Calc_End__c.field-meta.xml
<CustomField>
    <fullName>Calc_End__c</fullName>
    <formula>IF( ISPICKVAL( Length_of_PTO__c , &apos;8 hr&apos;) , DATETIMEVALUE(TEXT(YEAR( Date_of_PTO__c ))+ &apos;-&apos; +TEXT(MONTH( Date_of_PTO__c ))+&apos;-&apos; +TEXT(DAY( Date_of_PTO__c ))+ &apos; &apos; + &apos;22:00:00&apos;), DATETIMEVALUE(TEXT(YEAR( Date_of_PTO__c ))+ &apos;-&apos; +TEXT(MONTH( Date_of_PTO__c ))+&apos;-&apos; +TEXT(DAY( Date_of_PTO__c ))+ &apos; &apos; + Text( sys_endtimevalue__c )+ &apos;:00:00&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calc End</label>
    <type>DateTime</type>
</CustomField>