force-app/main/default/objects/PTO_Hours__c/fields/Date_of_PTO__c.field-meta.xml
<CustomField>
    <fullName>Date_of_PTO__c</fullName>
    <label>Date of PTO</label>
    <type>Date</type>
</CustomField>