force-app/main/default/objects/PTO_Hours__c/fields/Floating_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Floating_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator of Floating Holiday</description>
    <inlineHelpText>Check if Floating Holiday to be used.</inlineHelpText>
    <label>Floating Holiday</label>
    <type>Checkbox</type>
</CustomField>