force-app/main/default/objects/PTO_Hours__c/fields/Length_of_PTO__c.field-meta.xml
<CustomField>
    <fullName>Length_of_PTO__c</fullName>
    <label>Length of PTO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 hr</fullName>
            </value>
            <value>
                <fullName>8 hr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>