force-app/main/default/objects/PTO_Hours__c/fields/sys_endtimevalue__c.field-meta.xml
<CustomField>
    <fullName>sys_endtimevalue__c</fullName>
    <formula>Value (Text(Start_Time__c)) + 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sys_endtimevalue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>