force-app/main/default/objects/PTO_Hours__c/fields/sys_starttimevalue__c.field-meta.xml
<CustomField>
    <fullName>sys_starttimevalue__c</fullName>
    <formula>Value (Text(Start_Time__c)) + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sys_starttimevalue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>