force-app/main/default/objects/PTO_Hours__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName +  text(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueKey</label>
    <type>Text</type>
</CustomField>