force-app/main/default/objects/PTO_Hours__c/validationRules/PickStartTime.validationRule-meta.xml
<ValidationRule>
    <fullName>PickStartTime</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT( Start_Time__c ) = null,
   ISPICKVAL( Length_of_PTO__c , &apos;4 hr&apos;))</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Select Start Time for 1/ 2 day</errorMessage>
</ValidationRule>