force-app/main/default/objects/PTO_Hours__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Date_of_PTO__c</columns>
    <columns>Hours__c</columns>
    <columns>Floating_Holiday__c</columns>
    <columns>UniqueKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>