force-app/main/default/objects/PTO_Hours__c/listViews/PTO_ALL.listView-meta.xml
<ListView>
    <fullName>PTO_ALL</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Hours__c</columns>
    <columns>Date_of_PTO__c</columns>
    <columns>Floating_Holiday__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>PTO - ALL</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>JDE_1001025</roleAndSubordinates>
    </sharedTo>
</ListView>